[package]
name = "resonant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
futures-time = "3.0.1"
iced = { version = "0.14.0", features = ["canvas", "svg"] }
kira = "0.12.0"
num-traits = "0.2.19"
ordermap = { version = "1.2.0", features = ["serde"] }
rfd = "0.17.2"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
ulid = { version = "1.2.1", features = ["serde"] }
